tests/type-check/good/function-tuple-bool-to-any.arr
fun f(y :: {Number; Boolean}) -> {Number; Any}:
    y
end
