tests/type-check/bad/a-pred.arr

fun is-true(n :: Boolean):
  n
end

fun test(n :: Number % (is-true)):
  true
end

